package model;

public enum Rol {
    ADMINISTRADOR,
    ESTANDAR;
}
